<resources>
    <string name="app_name">Media player</string>
    <string name="music">music</string>
    <string name="nameMusic">Name of music</string>
    <string name="nameDir">Name of directory</string>
    <string name="artist">Artist</string>
    <string name="imageD">No image</string>
    <string name="startTime">00:00</string>
    <string name="EndTime">XX:XX</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_image">no image</string>
    <string name="enter_the_name">Enter the name</string>
    <string name="enter_the_uri">Enter the uri</string>
    <string name="author_txt">Author</string>
    <string name="music_not_found_alert">music not found</string>
    <string name="music_list">Music list</string>
    <string name="directories">Directories</string>
    <string name="songs">Songs</string>
    <string name="add_music">Add Music</string>
    <string name="add_dir">Add Directory</string>
    <string name="uri_item_db">Uri</string>
    <string name="enter_the_author">Enter the author</string>
    <string name="author">Author</string>
    <string name="your_music_list_loading">Your music list Loading</string>
    <string name="is_empty">is empty</string>
    <string name="to_have_song">to have %1$d song</string>
    <string name="to_have_songs">to have %1$d songs</string>
    <string name="your_music_list">Your music list %1$s</string>
    <string name="unnamed">Unnamed</string>
    <string name="delete">Delete</string>
    <string name="root_path">/storage/emulated/0/</string>
    <string name="skip">(skip)</string>
    <string name="cancel">cancel</string>
    <string name="permission_needed_title">Permission</string>
    <string name="permission_needed_message">The program requires certain permissions to function. Please grant the necessary access rights to proceed</string>
    <string name="continue_text">continue</string>
    <string name="permission_denied_forever_title">Permissions denied</string>
    <string name="permission_denied_forever_message">Please open the settings and grant consent for the necessary permissions</string>
    <string name="open_settings">open setting</string>
    <string name="_00_00_00_00">00:00/00:00</string>
    <string name="current_time_and_duration">%1$s/%2$s</string>
    <string name="music_player">Music Player</string>
    <string name="adding_dir_in_db_dialog">AddingDirInDbDialog</string>
    <string name="adding_song_in_db_dialog">AddingSongInDbDialog</string>
    <string name="already_in_the_database">An element with this URI is already in the database.</string>
    <string name="adding_in_db_failed">Adding in db failed %1$s</string>
</resources>