<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/itemView"
    android:background="?android:attr/selectableItemBackground"
    android:orientation="horizontal"
    android:layout_margin="4dp">

        <ImageView
            android:id="@+id/launchMusic"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="8dp"
            tools:src="@drawable/ic_play"
            android:layout_gravity="center"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/no_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/userNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="14sp"
                tools:text="@string/nameMusic"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/authorNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:layout_weight="1"
                    android:lines="1"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    tools:text="@string/author_txt" />

                <TextView
                    android:id="@+id/timeView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    tools:text="@string/_00_00_00_00" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>