<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/itemView"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal"
        android:gravity="center">

        <CheckBox
            android:id="@+id/is_add_to_list"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="12sp"
                android:hint="@string/enter_the_name"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/author_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:ellipsize="end"
                android:lines="1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="11sp"
                android:hint="@string/enter_the_author" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/uri_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:ellipsize="end"
                android:lines="1"
                android:textAlignment="center"
                android:textSize="11sp"
                android:hint="@string/enter_the_uri" />
        </LinearLayout>

            <TextView
                android:id="@+id/add_music_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/add_music"
                android:textSize="15sp"/>
        </LinearLayout>
</LinearLayout>