<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/itemView"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/is_add_to_list"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:padding="8dp"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:layout_marginTop="4dp"
                android:lines="1"
                android:textColor="@color/black"
                android:textAllCaps="true"
                android:textAlignment="center"
                android:textSize="14sp"
                tools:text="@string/nameMusic"/>

            <TextView
                android:id="@+id/author_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="10sp"
                tools:text="@string/author_txt" />

            <TextView
                android:id="@+id/uri_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="8sp"
                tools:text="@string/uri_item_db" />
        </LinearLayout>

        <ImageView
            android:id="@+id/item_more"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/no_image"
            android:padding="11dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_setting" />
    </LinearLayout>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="6sp"
        android:background="@color/black"
        android:alpha="0.1"/>

</LinearLayout>