<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/itemView"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal"
        android:gravity="center">

        <CheckBox
            android:id="@+id/is_add_to_list"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="8dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1"
                android:textColor="@color/black"
                android:textAllCaps="true"
                android:textAlignment="center"
                android:textSize="12sp"
                tools:hint="@string/enter_the_name"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/uri_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="11sp"
                tools:hint="Enter the author" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/uri_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="11sp"
                tools:hint="@string/enter_the_uri" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/add_dir_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/add_dir"
                android:textStyle="bold"
                android:background="?android:attr/selectableItemBackground"
                android:textColor="@color/black"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/add_music_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/add_music"
                android:textSize="15sp"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>