<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.dblists.DataBaseListFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_dir"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="10dp"
            android:src="@drawable/ic_back"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/imageD"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/print_dir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:lines="1"
            android:text="@string/directories"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_dir"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/add_dir_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_dir"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintVertical_chainStyle="spread_inside"
        tools:itemCount="3"
        tools:listitem="@layout/dir_item_db" />

    <ProgressBar
        android:id="@+id/directory_db_pb"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/list_dir"
        app:layout_constraintEnd_toEndOf="@id/list_dir"
        app:layout_constraintTop_toTopOf="@id/list_dir"
        app:layout_constraintBottom_toBottomOf="@id/list_dir"/>

    <Button
        android:id="@+id/add_dir_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_dir"
        app:layout_constraintTop_toBottomOf="@id/list_dir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/print_music"/>


    <TextView
        android:id="@+id/print_music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:lines="1"
        android:layout_margin="10dp"
        android:text="@string/songs"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/list_music"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_dir_btn" />



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_music"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/add_music_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/print_music"
        tools:itemCount="3"
        tools:listitem="@layout/b_data_item"/>

    <ProgressBar
        android:id="@+id/music_db_pb"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/list_music"
        app:layout_constraintEnd_toEndOf="@id/list_music"
        app:layout_constraintTop_toTopOf="@id/list_music"
        app:layout_constraintBottom_toBottomOf="@id/list_music"/>


    <Button
        android:id="@+id/add_music_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_music"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/list_music"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>